...
                                <segment toolTip="Add time caliper" image="calipers-icon-bw-20x20" width="32">
                                    <nil key="label"/>
                                </segment>
                                <segment toolTip="Add amplitude caliper" image="calipers-amplitude-icon-bw-20x20" width="32" tag="1">
                                    <nil key="label"/>
                                </segment>
                                <segment toolTip="Calibrate" image="angle_icon_2_20x20">
                                    <nil key="label"/>
                                </segment>
                                <segment label="Calibrate" toolTip="Clear calibration"/>
                                <segment label="Clear" toolTip="Clear calibration"/>
                            </segments>
                        </segmentedCell>
                        <connections>
                            <action selector="addCaliper:" target="-2" id="TkU-CH-Yg0"/>
                        </connections>
                    </segmentedControl>
...
                        <constraints>
                            <constraint firstAttribute="height" constant="21" id="wj5-y7-FoH"/>
                        </constraints>
                        <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="momentary" id="5zE-4y-ufs">
                            <font key="font" metaFont="system"/>
                            <segments>
                                <segment label="R/I" toolTip="Toggle rate/interval"/>
                                <segment label="mRR" toolTip="Calculate mean interval and rate" width="32" tag="1"/>
                                <segment label="QTc" toolTip="Calculate corrected QT" width="32"/>
                            </segments>
                        </segmentedCell>
                        <connections>
                            <action selector="doMeasurement:" target="-2" id="xbg-xN-OK6"/>
...
