...
    @IBAction func newWindow(_ sender: Any) {
        if secondaryWindows.count < secondaryWindowsMaxCount {
        let secondaryController = MainWindowController()
        secondaryWindows.append(secondaryController)
        secondaryController.showWindow(self)
        } else {
            let alert = NSAlert()
            alert.alertStyle = NSAlert.Style.warning
            alert.messageText = NSLocalizedString("Maximum number of windows already open.", comment:"")
            alert.addButton(withTitle: NSLocalizedString("OK", comment:""))
            alert.runModal()
            print("too many windows")
        }
...
