

//
//  EP_CalipersUITests.swift
//  EP CalipersUITests
//
//  Created by David Mann on 12/25/15.
//  Copyright © 2015 EP Studios. All rights reserved.
//

import XCTest

class EP_CalipersUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        //XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testUI() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
//        let app = XCUIApplication()
//        let normal12LeadEcgJpgWindow = app.windows["Normal 12_Lead ECG.jpg"]
//        normal12LeadEcgJpgWindow.groups.containing(.button, identifier:"Calibrate").children(matching: .button).elementBound(by: 0).click()
//        normal12LeadEcgJpgWindow.buttons["Calibrate"].click()
//        app.dialogs["alert"].buttons["Calibrate"].click()
//        normal12LeadEcgJpgWindow.buttons["R/I"].click()
//        normal12LeadEcgJpgWindow.buttons["Clear"].click()
//


    }
    
}
